--- a/app/scss/components/_button.scss
+++ b/app/scss/components/_button.scss
@@ -1,11 +1,11 @@
 @use "../abstracts/mixins" as utils;
 @use "../bs-customization/colors" as color;
 .btn {
-  border-radius: 5px !important;
-  font-size: 16px;
-  font-weight: 700;
+  border-radius: 3px !important;
+  font-size: 18px;
+  font-weight: 600;
   display: inline-flex;
-  padding: 0.8em 1em;
+  padding: 1.2em 1.6em;
   line-height: 1;
   align-items: center;
   justify-content: center;
@@ -18,5 +18,20 @@
 button {
   &:focus {
     outline: none;
+  }
+}
+.site-header{
+  &__btns{
+    &--01{
+      .header-text{
+        padding: 0;
+        font-size: 18px;
+        line-height: 1.175555555555556;
+        color: #222D39;
+        img{
+          margin-right: 15px;
+        }
+      }
+    }
   }
 }
