--- a/app/partials/pages/landing-1/_hero.njk
+++ b/app/partials/pages/landing-1/_hero.njk
@@ -2,10 +2,10 @@
 <div class="hero-section-01 bg-white-lilac">
     <div class="container">
         <div class="row align-items-center justify-content-center">
-            <div class="col-lg-6 col-md-8 col-sm-9 col-xs-10">
+            <div class="col-lg-6 col-md-9">
                 <div class="hero-section-01__content page-title-block">
                     <h6 class="subtitle">Hello Mate <span class="wave">👋</span></h6>
-                    <h1 class="title">I’m Michle Smith <br> a <span class="text-primary">Web Developer</span></h1>
+                    <h1 class="title">I’m Michle Smith a <span class="text-primary d-inline">Web Developer</span></h1>
                     <p class="text-dark">Hi, I'm Michle a freelance web designer from San-Francisco. I help brands turn their ideas into high quality products.</p>
                     <div class="hero-section-01__content--button-group">
                         <a class="btn btn-1 bg-primary text-white" href="#">
