--- a/app/scss/components/_button.scss
+++ b/app/scss/components/_button.scss
@@ -2,13 +2,16 @@
 @use "../bs-customization/colors" as color;
 .btn {
   border-radius: 3px !important;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 600;
   display: inline-flex;
   padding: 1.2em 1.6em;
   line-height: 1;
   align-items: center;
   justify-content: center;
+  @media (min-width:575px) {
+    font-size: 18px;
+  }
   &:focus{
     box-shadow: none;
     outline: none;
@@ -23,6 +26,10 @@ button {
 .site-header{
   &__btns{
     &--01{
+      @media (max-width:992px) {
+        text-align: center;
+        margin-top: 55px;
+      }
       .header-text{
         padding: 0;
         font-size: 18px;
