about section complete

--- a/app/partials/pages/landing-1/_hero.njk
+++ b/app/partials/pages/landing-1/_hero.njk
@@ -8,13 +8,13 @@
                     <h1 class="title">I’m Michle Smith a <span class="text-primary d-inline">Web Developer</span></h1>
                     <p class="text-dark">Hi, I'm Michle a freelance web designer from San-Francisco. I help brands turn their ideas into high quality products.</p>
                     <div class="hero-section-01__content--button-group">
-                        <a class="btn btn-1 bg-primary text-white" href="#">
+                        <a class="btn btn-1 btn-primary" href="#">
                             Book a Call
                             <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1 13L7 7L1 1" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                         </a>
-                        <a class="btn btn-2" href="#">Download CV
+                        <a class="btn btn-2 btn-outline-primary" href="#">Download CV
                         <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M13 9V11.6667C13 12.0203 12.8595 12.3594 12.6095 12.6095C12.3594 12.8595 12.0203 13 11.6667 13H2.33333C1.97971 13 1.64057 12.8595 1.39052 12.6095C1.14048 12.3594 1 12.0203 1 11.6667V9" stroke="" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                         <path d="M3.6665 5.6665L6.99984 8.99984L10.3332 5.6665" stroke="" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
