--- a/app/scss/helpers/_typography.scss
+++ b/app/scss/helpers/_typography.scss
@@ -41,10 +41,11 @@
       font-size: 40px;
     }
   }
-  .text {
+  p {
     font-size: 16px;
-    line-height: 1.5;
-    @media (min-width: 768px) {
+    font-weight: 500;
+    line-height: 1.555555555555556;
+    @media (min-width: 575px) {
       font-size: 18px;
     }
   }
