--- a/app/partials/template.njk
+++ b/app/partials/template.njk
@@ -38,6 +38,34 @@
     <!-- Plugin's Scripts -->
     <!-- Custom stylesheet -->
     <script src="./js/vendor.min.js"></script>
+    <script>
+      /**
+     * Replace all SVG images with inline SVG
+     */
+      $(document).ready(function () {
+        $('img[class*="make-it-inline"]').each(function () {
+          var $img = jQuery(this);
+          var imgURL = $img.attr('src');
+          var attributes = $img.prop("attributes");
+
+          $.get(imgURL, function (data) {
+            // Get the SVG tag, ignore the rest
+            var $svg = jQuery(data).find('svg');
+
+            // Remove any invalid XML tags
+            $svg = $svg.removeAttr('xmlns:a');
+
+            // Loop through IMG attributes and apply on SVG
+            $.each(attributes, function () {
+              $svg.attr(this.name, this.value);
+            });
+
+            // Replace IMG with SVG
+            $img.replaceWith($svg);
+          }, 'xml');
+        });
+      });
+    </script>
     <script src="./plugins/fancybox/jquery.fancybox.min.js"></script>
     <script src="./plugins/nice-select/jquery.nice-select.min.js"></script>
     <script src="./plugins/aos/aos.min.js"></script>
