--- a/app/scss/pages/landing-1/_service.scss
+++ b/app/scss/pages/landing-1/_service.scss
@@ -1,9 +1,9 @@
 .service-section{
     padding: 60px 0;
-    @media (min-widht:575px) {
+    @media (min-width:575px) {
         padding: 80px 0;
     }
-    @media (min-widht:992px) {
+    @media (min-width:992px) {
         padding: 130px 0;
     }
     .section-title-block{
