counter section and qualification section complete

--- a/app/scss/abstracts/_colors.scss
+++ b/app/scss/abstracts/_colors.scss
@@ -5,6 +5,7 @@ $shamrock: #36CD77;
 $black :#222D39;
 $gray : #8492A7;
 $solitude:#EBF6FF;
+$mystic:#EBF6FF;
 
 $header-link-color: $black;
 $btn-link-color: $black;
@@ -21,4 +22,5 @@ $custom-colors: (
   "black": $black,
   "gray": $gray,
   "solitude": $solitude,
+  "mystic": $mystic,
 );
