cta setion complete

--- a/app/scss/components/_button.scss
+++ b/app/scss/components/_button.scss
@@ -63,7 +63,13 @@
     }
   }
 }
-
+.svg-white{
+  svg{
+    path{
+      stroke: white !important;
+    }
+  }
+}
 button {
   &:focus {
     outline: none;
