--- a/app/partials/pages/landing-1/_cta.njk
+++ b/app/partials/pages/landing-1/_cta.njk
@@ -1,31 +1,20 @@
 {% macro render(args) %}
-<div class="cta-section">
-    <div class="background-image" data-background="image/home/hero-area-2.png">
+    <div class="cta-section-01">
         <div class="container">
-            <div class="row">
-                <div class="col-xl-5 col-lg-6 col-xs-9 col-10">
-                    <div class="cta-content cta-title-block" data-aos="fade-right" data-aos-duration="500"
-                        data-aos-delay="800">
-                        <h1 class="title">We’d love to hear from you!</h1>
-                        <p class="text text-dark text-18">Don’t hesitate to talk with us. We are waiting to <br
-                                class="d-none d-xs-block"> handle your business marketing.</p>
-                        <div class="hero-btn">
-                            <a class="btn btn-primary btn-primary-hvr btn-w-arrow btn-arrow-anim-01" href="#">
-                                Get Free Consultation <i><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
-                                        viewBox="0 0 32 32">
-                                        <g fill="none" stroke="#020C17" stroke-width="1.5" stroke-linejoin="round"
-                                            stroke-miterlimit="10">
-                                            <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
-                                            <path class="arrow-icon--arrow"
-                                                d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
-                                        </g>
-                                    </svg></i>
-                            </a>
-                        </div>
-                    </div>
+            <div class="cta-section-01__wrapper" style="background-image: url(./image/l-1/cta.png);">
+                <div class="section-content-block text-center text-lg-start">
+                    <h6 class="text-white subtitle mb-10">Have Any Project In Mind?</h6>
+                    <h2 class="title text-white">Don’t Be Hesitate To Contact <br class=" d-none d-lg-block"> With Me</h2>
+                </div>
+                <div class="content-button mt-4 mt-lg-0">
+                    <a class="btn btn-1 btn-primary text-white svg-white" href="#">
+                        Get A Quote
+                        <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1 13L7 7L1 1" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>                            
+                    </a>
                 </div>
             </div>
         </div>
     </div>
-</div>
 {% endmacro %}
