--- a/app/partials/components/cards.njk
+++ b/app/partials/components/cards.njk
@@ -10,3 +10,32 @@
     </div>
 </div>
 {% endmacro %}
+{% macro BlogCardOne(obj) %}
+    <div class="card-blog">
+        <div class="card-image">
+            <img src="{{obj.img}}" alt="cad" class="w-100">
+        </div>
+        <div class="card-body">
+            <div class="date">
+                <span class="text-dark">{{obj.date}}</span>
+            </div>
+            <h6 class="titel">{{obj.title}}</h6>
+            <div class="author-block">
+                <div class="d-flex align-items-center">
+                    <div class="author">
+                        <img src="./image/l-1/author.png" alt="author">
+                    </div>
+                    <div class="author-name">
+                        <h6 class="text-dark">Souja Flora</h6>
+                    </div>
+                </div>
+                <div class="comment">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15 10.3333C15 10.7459 14.8361 11.1416 14.5444 11.4333C14.2527 11.725 13.857 11.8889 13.4444 11.8889H4.11111L1 15V2.55556C1 2.143 1.16389 1.74733 1.45561 1.45561C1.74733 1.16389 2.143 1 2.55556 1H13.4444C13.857 1 14.2527 1.16389 14.5444 1.45561C14.8361 1.74733 15 2.143 15 2.55556V10.3333Z" stroke="#8492A7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    <span class="text-dark">{{obj.comment}}</span>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endmacro %}
