setion padding fix

--- a/app/partials/pages/landing-1/_footer.njk
+++ b/app/partials/pages/landing-1/_footer.njk
@@ -2,7 +2,7 @@
     <div class="footer-section-01">
         <div class="container">
             <div class="row">
-                <div class="footer-section-block text-center">
+                <div class="footer-section-block text-center" data-aos="fade-up" data-aos-duration="800" data-aos-delay="1000">
                     <h6 class="subtitle mb-10">Contact me</h6>
                     <h2 class="title text-white">Got a Project? Lets Talk!</h2>
                     <a class="btn btn-1 btn-primary text-white svg-white" href="#">
