--- a/app/partials/pages/landing-1/_qualification.njk
+++ b/app/partials/pages/landing-1/_qualification.njk
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-10">
-                    <div class="qualification-section-01__content one">
+                    <div class="qualification-section-01__content one" data-aos="fade-right" data-aos-duration="800" data-aos-delay="1000">
                         <div class="section-content-block">
                             <h6 class="subtitle mb-10 text-primary">Qualification</h6>
                             <h2 class="title">My Education</h2>
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-10">
-                    <div class="qualification-section-01__content two">
+                    <div class="qualification-section-01__content two" data-aos="fade-left" data-aos-duration="800" data-aos-delay="1000">
                         <div class="section-content-block">
                             <h6 class="subtitle mb-10 text-primary">Work Experience</h6>
                             <h2 class="title">My Awesome Experience</h2>
