--- a/app/partials/pages/landing-1/_about.njk
+++ b/app/partials/pages/landing-1/_about.njk
@@ -3,15 +3,15 @@
         <div class="container">
             <div class="row align-items-center justify-content-center">
                 <div class="col-xxl-5 col-xl-4 col-lg-5">
-                    <div class="about-section-01__image-group d-none d-lg-block">
-                        <img src="./image/l-1/about-img.png" alt="about-img" class="w-100">
+                    <div class="about-section-01__image-group d-none d-lg-block"  data-aos="fade-up" data-aos-duration="800" data-aos-delay="1000">
+                            <img src="./image/l-1/about-img.png" alt="about-img" class="w-100">
                         <div class="about-section-01__image-group--shadow d-none d-xl-block">
                             <img src="./image/l-1/about-img-shadow.png" alt="shadow" class="w-100">
                         </div>
                     </div>
                 </div>
                 <div class="col-xxl-6 offset-xxl-1 col-xl-7 offset-xl-1 col-lg-7">
-                    <div class="about-section-01__content section-content-block">
+                    <div class="about-section-01__content section-content-block" data-aos="fade-left" data-aos-duration="800" data-aos-delay="1200">
                         <h6 class="subtitle mb-10 text-primary">About Me</h6>
                         <h2 class="title">More Than 5+ Years Programming Experienced</h2>
                         <p class="text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
