--- a/app/partials/pages/landing-1/_cta.njk
+++ b/app/partials/pages/landing-1/_cta.njk
@@ -2,11 +2,11 @@
     <div class="cta-section-01">
         <div class="container">
             <div class="cta-section-01__wrapper" style="background-image: url(./image/l-1/cta.png);">
-                <div class="section-content-block text-center text-lg-start">
+                <div class="section-content-block text-center text-lg-start" data-aos="fade-right" data-aos-duration="800" data-aos-delay="1000">
                     <h6 class="text-white subtitle mb-10">Have Any Project In Mind?</h6>
                     <h2 class="title text-white">Don’t Be Hesitate To Contact <br class=" d-none d-lg-block"> With Me</h2>
                 </div>
-                <div class="content-button mt-4 mt-lg-0">
+                <div class="content-button mt-4 mt-lg-0" data-aos="fade-left" data-aos-duration="800" data-aos-delay="1000">
                     <a class="btn btn-1 btn-primary text-white svg-white" href="#">
                         Get A Quote
                         <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
