--- a/app/partials/pages/landing-1/_hero.njk
+++ b/app/partials/pages/landing-1/_hero.njk
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row align-items-center justify-content-center">
             <div class="col-lg-6 col-md-9">
-                <div class="hero-section-01__content page-title-block">
+                <div class="hero-section-01__content page-title-block" data-aos="fade-right" data-aos-duration="800" data-aos-delay="1000">
                     <h6 class="subtitle">Hello Mate <span class="wave">👋</span></h6>
                     <h1 class="title">I’m Michle Smith a <span class="text-primary d-inline">Web Developer</span></h1>
                     <p class="text-dark">Hi, I'm Michle a freelance web designer from San-Francisco. I help brands turn their ideas into high quality products.</p>
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="col-xxl-5 offset-xxl-1 col-lg-6 col-md-8">
-                <div class="hero-section-01__image-group">
+                <div class="hero-section-01__image-group" data-aos="fade-up" data-aos-duration="800" data-aos-delay="1500">
                     <img src="./image/l-1/hero.png" alt="hero-img" class="w-100">
                     <div class="hero-section-01__image-group--icon">
                         <div class="icon-1 floating-Y-animation">
