--- a/app/scss/pages/landing-1/_about.scss
+++ b/app/scss/pages/landing-1/_about.scss
@@ -1,6 +1,15 @@
 .about-section-01{
-    padding-top: 65px;
-    padding-bottom: 130px;
+    overflow: hidden;
+    padding-top: 30px;
+    padding-bottom: 60px;
+    @media (min-width:575px) {
+        padding-top: 37px;
+        padding-bottom: 80px;
+    }
+    @media (min-width:992px) {
+        padding-top: 65px;
+        padding-bottom: 0;
+    }
     &__content{
         .title{
             margin-bottom: 25px;
