--- a/app/scss/pages/landing-1/_hero.scss
+++ b/app/scss/pages/landing-1/_hero.scss
@@ -2,6 +2,7 @@
     padding: 101px 0 60px;
     position: relative;
     z-index: 1;
+    overflow: hidden;
     @media (min-width:575px) {
         padding: 125px 0 80px;
     }
