--- a/app/scss/pages/landing-1/_service.scss
+++ b/app/scss/pages/landing-1/_service.scss
@@ -4,7 +4,7 @@
         padding: 80px 0;
     }
     @media (min-width:992px) {
-        padding: 130px 0;
+        padding: 125px 0 130px;
     }
     .section-title-block{
         margin-bottom: 35px;
