footer shape fix

--- a/app/partials/pages/landing-1/_footer.njk
+++ b/app/partials/pages/landing-1/_footer.njk
@@ -1,5 +1,8 @@
 {% macro render(args) %}
     <div class="footer-section-01">
+        <div class="footer-section-01__shape">
+            <img src="./image/l-1/ctarectangle.svg" alt="shape" class="make-it-inline">
+        </div>
         <div class="container">
             <div class="row">
                 <div class="footer-section-block text-center" data-aos="fade-up" data-aos-duration="800" data-aos-delay="1000">
