--- a/app/scss/pages/landing-1/_footer.scss
+++ b/app/scss/pages/landing-1/_footer.scss
@@ -1,11 +1,24 @@
 .footer-section-01{
     background: var(--bs-black);
     padding: 60px 0;
+    position: relative;
     @media (min-width:575px) {
         padding: 80px 0;
     }
     @media (min-width:992px) {
         padding: 130px 0;
+    }
+    &__shape{
+        position: absolute;
+        top: -5px;
+        left: 0;
+        svg{
+            width: 100%;
+            height: 100%;
+        }
+        @media (min-width:480px) {
+            top: 0;
+        }
     }
     .footer-section-block{
         .subtitle{
