--- a/app/scss/abstracts/_colors.scss
+++ b/app/scss/abstracts/_colors.scss
@@ -6,7 +6,7 @@ $black :#222D39;
 $gray : #8492A7;
 $solitude:#EBF6FF;
 $mystic:#EBF6FF;
-
+$foam:  #F0F9FE;
 $header-link-color: $black;
 $btn-link-color: $black;
 
@@ -23,4 +23,5 @@ $custom-colors: (
   "gray": $gray,
   "solitude": $solitude,
   "mystic": $mystic,
+  "foam": $foam,
 );
