about section complete

--- a/app/scss/pages/landing-2/_index.scss
+++ b/app/scss/pages/landing-2/_index.scss
@@ -1,7 +1,7 @@
 
 @forward "hero";
-// @forward "brand";
-// @forward "about";
+@forward "brand";
+@forward "about";
 // @forward "skill";
 // @forward "service";
 // @forward "counter";
