fact section complete

--- a/app/scss/pages/landing-2/_index.scss
+++ b/app/scss/pages/landing-2/_index.scss
@@ -2,9 +2,9 @@
 @forward "hero";
 @forward "brand";
 @forward "about";
+@forward "counter";
 // @forward "skill";
 // @forward "service";
-// @forward "counter";
 // @forward "qualification";
 // @forward "cta";
 // @forward "portfolio";
