skill section complete

--- a/app/scss/pages/landing-2/_index.scss
+++ b/app/scss/pages/landing-2/_index.scss
@@ -3,7 +3,7 @@
 @forward "brand";
 @forward "about";
 @forward "counter";
-// @forward "skill";
+@forward "skill";
 // @forward "service";
 // @forward "qualification";
 // @forward "cta";
