--- a/app/scss/pages/landing-2/_counter.scss
+++ b/app/scss/pages/landing-2/_counter.scss
@@ -1,13 +1,19 @@
 .counter-section-02{
+    padding: 30px 0 60px ;
+    @media (min-width:575px) {
+        padding:  40px 0 80px;
+    }
+    @media (min-width:992px) {
+        padding: 45px 0 130px ;
+    }
     .counter-wrapper{
-        padding: 60px 0 60px;
+        padding: 60px 0 30px;
         border-top: 1px solid #DEE7EE;
         border-bottom: 1px solid #DEE7EE;
         display: flex;
         align-items: center;
         justify-content: space-between;
         flex-wrap: wrap;
-        margin-bottom: -24px !important;
         .count-block{
             @media (max-width:575px) {
                 width: 50%;
