skill bar text fix

--- a/app/partials/pages/landing-2/_skill.njk
+++ b/app/partials/pages/landing-2/_skill.njk
@@ -7,7 +7,7 @@
                         <img src="./image/l-2/skill-img.png" alt="skill-img">
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-10 col-sm-11" data-aos="fade-left" data-aos-duration="800" data-aos-delay="1000">
+                <div class="col-lg-6 col-md-10 col-sm-11">
                     <div class="skill-section-02__content section-content-block mt-5 mt-lg-0">
                         <h6 class="subtitle mb-10 text-primary">Our Skill</h6>
                         <h2 class="title">We Aim to Share Knowledge,
@@ -33,7 +33,7 @@
                                     <h5>Business Startup</h5>
                                     </div>
                                     <div class="skill-bar-count">
-                                    <span>74%</span>
+                                    <span>86%</span>
                                     </div>
                                 </div>
                                 <div class="skill-bar">
@@ -46,7 +46,7 @@
                                     <h5>Marketing Analysis</h5>
                                     </div>
                                     <div class="skill-bar-count">
-                                    <span>74%</span>
+                                    <span>48%</span>
                                     </div>
                                 </div>
                                 <div class="skill-bar">
